Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@ This library is easier and more powerful than <a href="https://github.com/kennet
 </pre></div>
 
 <h2>
+<a name="command-line-usage" class="anchor" href="#command-line-usage"><span class="octicon octicon-link"></span></a>Command line usage</h2>
+
+<pre lang="shell"><code>% copy "I'm here to make web a better place!!"
+% paste
+I'm here to make web a better place!!
+%
+% echo I\'m here to make web a better place!! | copy
+% paste
+I'm here to make web a better place!!
+%
+</code></pre>
+
+<h2>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
 
 <p><em>copypaste</em> is licensed under the MIT license. See the license file for details.</p>
